# proyectoSecuencial

./: .gitignore  CMakeLists.txt  ContenedoraListas.cpp  ContenedoraListas.h  Enfermedad.cpp  Enfermedad.h  Iterador.cpp  Iterador.h  IteradorLista.cpp  IteradorLista.h  Lista.cpp  Lista.h  MenuAnalisis.cpp  MenuAnalisis.h  Nodo.cpp  Nodo.h  Paciente.cpp  Paciente.h  main.cpp
